# loxx

./: .gitattributes  .gitignore  Cargo.toml  README.md  benchmark.py  test.py
benchmark/: trees.lox  zoo_batch.lox
loxi/: Cargo.toml
loxi/src/: lib.rs  main.rs  native_fn.rs  util.rs
loxi/src/interp/: class.rs  env.rs  environment.rs  function.rs  interner.rs  mod.rs  object.rs  value.rs
loxi/src/lex/: mod.rs  test.rs  tests.rs  token.rs
loxi/src/parse/: ast.rs  error.rs  expr.rs  mod.rs  stmt.rs  test.rs  token.rs
loxi/src/resolve/: mod.rs  scope.rs
loxi/src/util/: mod.rs
loxii/: Cargo.toml
loxii/src/: bytecode.rs  compiler.rs  lib.rs  main.rs  memory.rs  metadata.rs  util.rs  value.rs  vm.rs
test/assignment/: undefined.lox
test/benchmark/: equality.lox  string_equality.lox
test/constructor/: call_init_early_return.lox  call_init_explicitly.lox  default.lox  early_return.lox  return_in_nested_function.lox
test/field/: set_evaluation_order.lox
test/function/: local_mutual_recursion.lox  print.lox
test/method/: print_bound_method.lox  refer_to_name.lox
test/string/: error_after_multiline.lox
test/this/: nested_class.lox
test/variable/: undefined_global.lox  undefined_local.lox  unreached_undefined.lox
