[package]
name = "loxi"
version = "0.1.0"
edition = "2021"

[features]
# default = ["unicode", "loxlox"]
unicode = []
loxlox = []

[dependencies]
clap = { workspace = true }
coredump = { workspace = true }
thiserror = { workspace = true }

indoc = "2.0.5"
lasso = "0.7.3"
rustc-hash = "2.0.0"
strum = { version = "0.26.3", features = ["derive"] }
unicode-width = "0.1.13"
vec_map = "0.8.2"

[dev-dependencies]
pretty_assertions.workspace = true
